0012 - 0100 Added empty view on Roaster Order transaction; fixed Heading overflow issue (0.8)

--- a/src/app/modules/dashboard/roaster-dashboard/dashboard-sales/dashboard-sales.component.scss
+++ b/src/app/modules/dashboard/roaster-dashboard/dashboard-sales/dashboard-sales.component.scss
@@ -115,7 +115,9 @@ li.nav-item {
     background: white;
     color: black;
 }
-
+.break-all {
+    word-break: break-all;
+}
 ::ng-deep ngx-tooltip-content.ngx-charts-tooltip-content.type-tooltip {
     .tooltip-caret.position-top {
         border-top-color: white;
